# stack0.0.4

./: .travis.yml  CMakeLists.txt  README.md  stack0.0.1.hpp
example/: CMakeLists.txt  example.cpp  main.cpp
include/: stack0.0.1.hpp
sources/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/cmake/: FindCPM.cmake
tests/source/: init.cpp
